MFC 271745,271834,271899,271900,271913,272022,272023:

Revert changes to shared code of the ixl and ixlv drivers to allow
  for easier long-term maintainability.

  Restrict the drivers to building on amd64 for now as it is
  only tested on that 64bit architecture.

  Just depend on PCI and neither INET nor INET6; also make sure we
  can build individual drivers and they do not depend on each other
  anymore.

  Reviewed by:	gnn, eric.joyner intel.com
PR:		193824
Approved by:	re (gjb)

Former-commit-id: 95cda652cbe38d0920fe231014243b1c38a59616