sys/dev/ixl/if_ixl.c
@@ -4730,6 +4730,9 @@ argument_list|(
 name|pf
 argument_list|)
 expr_stmt|;
+ifdef|#
+directive|ifdef
+name|INET
 if|if
 condition|(
 operator|!
@@ -4748,6 +4751,8 @@ argument_list|,
 name|ifa
 argument_list|)
 expr_stmt|;
+endif|#
+directive|endif
 block|}
 else|else
 name|error
@@ -12326,7 +12331,7 @@ name|txr
 operator|->
 name|base
 condition|)
-name|i40e_free_dma
+name|i40e_free_dma_mem
 argument_list|(
 operator|&
 name|pf
@@ -12378,7 +12383,7 @@ name|rxr
 operator|->
 name|base
 condition|)
-name|i40e_free_dma
+name|i40e_free_dma_mem
 argument_list|(
 operator|&
 name|pf
@@ -12747,7 +12752,7 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|i40e_allocate_dma
+name|i40e_allocate_dma_mem
 argument_list|(
 operator|&
 name|pf
@@ -12758,6 +12763,8 @@ operator|&
 name|txr
 operator|->
 name|dma
+argument_list|,
+name|i40e_mem_reserved
 argument_list|,
 name|tsize
 argument_list|,
@@ -12961,7 +12968,7 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|i40e_allocate_dma
+name|i40e_allocate_dma_mem
 argument_list|(
 operator|&
 name|pf
@@ -12972,6 +12979,8 @@ operator|&
 name|rxr
 operator|->
 name|dma
+argument_list|,
+name|i40e_mem_reserved
 argument_list|,
 name|rsize
 argument_list|,
@@ -13101,7 +13110,7 @@ name|rxr
 operator|->
 name|base
 condition|)
-name|i40e_free_dma
+name|i40e_free_dma_mem
 argument_list|(
 operator|&
 name|pf
@@ -13120,7 +13129,7 @@ name|txr
 operator|->
 name|base
 condition|)
-name|i40e_free_dma
+name|i40e_free_dma_mem
 argument_list|(
 operator|&
 name|pf
